objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Emp_Address__c</fullName>
        <label>Emp_Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <label>Emp_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mantor</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees (Mantor)</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>